[gd_scene load_steps=8 format=3 uid="uid://bxylsq6nbl4ly"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_efrsg"]
[ext_resource type="PackedScene" uid="uid://3jef2gqa6llt" path="res://scenes/basket.tscn" id="2_ilxa7"]
[ext_resource type="PackedScene" uid="uid://hlaiw2uq1lee" path="res://scenes/apple.tscn" id="3_hlmcm"]
[ext_resource type="Texture2D" uid="uid://djyosrc2hp54f" path="res://assets/tree_background.png" id="3_uo81w"]
[ext_resource type="AudioStream" uid="uid://cjwugpc8msav8" path="res://assets/game_music.mp3" id="5_3ycvy"]
[ext_resource type="AudioStream" uid="uid://f24rk7vobwsm" path="res://assets/power_up.mp3" id="6_2x3e5"]

[sub_resource type="GDScript" id="GDScript_i7geq"]
script/source = "extends Node


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
    pass
"

[node name="Game" type="Node2D"]
script = ExtResource("1_efrsg")
apple_scene = ExtResource("3_hlmcm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(589, 316)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_uo81w")
script = SubResource("GDScript_i7geq")

[node name="Paddle" parent="." instance=ExtResource("2_ilxa7")]
position = Vector2(611, 586)
speed = 200.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Label" type="Label" parent="."]
offset_right = 137.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0.96937, 0.383423, 0.271709, 1)
theme_override_colors/font_shadow_color = Color(0.991205, 0.679226, 0.770177, 1)
theme_override_colors/font_outline_color = Color(0.224085, 0.236138, 0.825413, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 48
text = "000"

[node name="BackgroundAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3ycvy")
volume_db = -16.589
autoplay = true

[node name="AudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2x3e5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartPopup" type="PopupPanel" parent="CanvasLayer"]
size = Vector2i(179, 100)
visible = true

[node name="Label" type="Label" parent="CanvasLayer/StartPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 175.0
offset_bottom = 96.0
text = "Welcome"

[node name="Button" type="Button" parent="CanvasLayer/StartPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 175.0
offset_bottom = 96.0
text = "Start Game"

[node name="GameOverPopup" type="PopupPanel" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/GameOverPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
text = "Game Over"

[node name="Button" type="Button" parent="CanvasLayer/GameOverPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 118.0
offset_bottom = 96.0
text = "Restart Game"

[connection signal="area_entered" from="Paddle" to="." method="_on_basket_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/StartPopup/Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPopup/Button" to="." method="_on_restart_button_pressed"]
